@@ -4,6 +4,13 @@
 #
 
 
+#
+# -------------- 2021-06-09 ----------------------------------------------------
+#
+
+## lcd2004_i2c and sensor_pi stuff
+- create error handling macro for eprintf/syslog
+
 
 #
 # -------------- 2021-05-04 ----------------------------------------------------
