@@ -148,9 +148,11 @@ static void lock_file_handling(void)
 	int err = already_running(LOCKFILE);
 	if (err == 1) {
 		syslog(LOG_ERR, "i'm already running");
+		eprintf("i'm already running");
 		exit(EXIT_FAILURE);
 	} else if (err < 0) {
 		syslog(LOG_ERR, "can't setup lockfile");
+		eprintf("can't setup lockfile");
 		exit(EXIT_FAILURE);
 	}
 }
@@ -463,6 +465,9 @@ int lcd_write_line(struct lcd_request req)
 {
 
 #ifdef __DEBUG__
+	printf("value of req.line: %d", req.line);
+	printf("value of req.curs_pos: %d", req.cur_pos);
+	printf("value of req.str: %s", req.str);
 	syslog(LOG_INFO, "value of req.line: %d", req.line);
 	syslog(LOG_INFO, "value of req.curs_pos: %d", req.cur_pos);
 	syslog(LOG_INFO, "value of req.str: %s", req.str);
@@ -504,6 +509,9 @@ int lcd_write_cmd(struct lcd_request req)
 	char cmd = -1 * req.line;
 
 #ifdef __DEBUG__
+	printf("value of req.line: %d", req.line);
+	printf("value of req.curs_pos: %d", req.cur_pos);
+	printf("value of req.str: %s", req.str);
 	syslog(LOG_INFO, "value of req.line: %d", req.line);
 	syslog(LOG_INFO, "value of req.curs_pos: %d", req.cur_pos);
 	syslog(LOG_INFO, "value of req.str: %s", req.str);
@@ -520,6 +528,8 @@ int lcd_write_cmd(struct lcd_request req)
 		break;
 	default:
 		syslog(LOG_ERR, "value of req.line is to large: %d",
+			req.line);
+		fprintf(stderr, "value of req.line is to large: %d",
 			req.line);
 		return -1;
 	}
@@ -602,6 +612,7 @@ void * server_handling(void *arg)
 	read_fifo = create_read_fifo(DAEMON_FIFO);
 	if (read_fifo < 0) {
 		syslog(LOG_ERR, "can't setup read fifo");
+		eprintf("can't setup read fifo");
 		exit(EXIT_FAILURE);
 	}
 
@@ -609,6 +620,7 @@ void * server_handling(void *arg)
 	int dummy_fd = open(DAEMON_FIFO, O_WRONLY);
 	if (dummy_fd < 0) {
 		syslog(LOG_ERR, "open in server_handling()");
+		eprintf("open in server_handling()");
 		exit(EXIT_FAILURE);
 	}
 
@@ -623,6 +635,7 @@ void * server_handling(void *arg)
 		if (read(read_fifo, &req, len) != (int) len) {
 			syslog(LOG_ERR,
 				"len of request not valid -> ignore it");
+			eprintf("len of request not valid -> ignore it");
 			continue;
  		}
 
@@ -630,12 +643,14 @@ void * server_handling(void *arg)
 			if (lcd_write_cmd(req) != 0) {
 				syslog(LOG_ERR,
 					"can't write line -> ignore it");
+				eprintf("can't write line -> ignore it");
 				continue;
 			}
 		} else {
 			if (lcd_write_line(req) != 0) {
 				syslog(LOG_ERR,
 					"can't write cmd -> ignore it");
+				eprintf("can't write cmd -> ignore it");
 				continue;
 			}
 		}
@@ -699,6 +714,7 @@ int main(int argc, char *argv[])
 	err = init_lcd(adapter, addr, type);
 	if (err < 0) {
 		syslog(LOG_ERR, "can't init LCD");
+		eprintf("can't init LCD");
 		exit(EXIT_FAILURE);
 	}
 
@@ -706,6 +722,7 @@ int main(int argc, char *argv[])
 	err = pthread_create(&tid, NULL, server_handling, NULL);
 	if (err != 0) {
 		syslog(LOG_ERR, "can't create thread");
+		eprintf("can't create thread");
 		exit(EXIT_FAILURE);
 	}
 
