@@ -98,9 +98,11 @@ static void lock_file_handling(void)
 	int err = already_running(LOCKFILE);
 	if (err == 1) {
 		syslog(LOG_ERR, "i'm already running");
+		eprintf("i'm already running");
 		exit(EXIT_FAILURE);
 	} else if (err < 0) {
 		syslog(LOG_ERR, "can't setup lockfile");
+		eprintf("can't setup lockfile");
 		exit(EXIT_FAILURE);
 	}
 }
@@ -121,6 +123,7 @@ static int init_server_fifo(void)
 	read_fifo = create_read_fifo(DAEMON_FIFO);
 	if (read_fifo < 0) {
 		syslog(LOG_ERR, "can't setup read fifo");
+		eprintf("can't setup read fifo");
 		exit(EXIT_FAILURE);
 	}
 
@@ -128,6 +131,7 @@ static int init_server_fifo(void)
 	dummy_fd = open(DAEMON_FIFO, O_WRONLY);
 	if (dummy_fd < 0) {
 		syslog(LOG_ERR, "open in server_handling()");
+		eprintf("open in server_handling()");
 		exit(EXIT_FAILURE);
 	}
 
@@ -148,6 +152,7 @@ static int get_values(void)
 		buf[i] = i2c_smbus_read_byte_data(sensor, i);
 		if (buf[i] < 0) {
 			syslog(LOG_ERR, "can't read register value");
+			eprintf("can't read register value");
 			return -1;
 		}
 	}
@@ -155,10 +160,12 @@ static int get_values(void)
 	/* handle external temp sensor */
 	if (buf[STATUS_REG] & 0x01) {
 		syslog(LOG_ERR, "external temperature sensor overrange");
+		eprintf("external temperature sensor overrange");
 		values[EXT_TEMP] = - 0xFF;
 		sensor_state |= STATE_EXT_TEMP;
 	} else if (buf[STATUS_REG] & 0x02) {
 		syslog(LOG_ERR, "no external temperature sensor");
+		eprintf("no external temperature sensor");
 		values[EXT_TEMP] = - 0xFF;
 		sensor_state |= STATE_EXT_TEMP;
 	} else {
@@ -169,12 +176,17 @@ static int get_values(void)
 			buf[TEMP_REG]);
 		syslog(LOG_INFO, "current external sensor temperature: %d °C",
 			values[EXT_TEMP]);
+		printf("current external sensor temperature: %d °C",
+			buf[TEMP_REG]);
+		printf("current external sensor temperature: %d °C",
+			values[EXT_TEMP]);
 #endif
 	}
 
 	/* handle onboard temp sensor */
 	if (buf[ON_BOARD_SENSOR_ERROR] != 0) {
 		syslog(LOG_ERR, "onboard temperature sensor out-of-date error");
+		eprintf("onboard temperature sensor out-of-date error");
 		values[ONBOARD_TEMP] = - 0xFF;
 		sensor_state |= STATE_ONBOARD_TEMP;
 	} else {
@@ -185,12 +197,17 @@ static int get_values(void)
 			buf[ON_BOARD_TEMP_REG]);
 		syslog(LOG_INFO, "current onboard sensor temperature: %d °C",
 			values[ONBOARD_TEMP]);
+		printf("current onboard sensor temperature: %d °C",
+			buf[ON_BOARD_TEMP_REG]);
+		printf("current onboard sensor temperature: %d °C",
+			values[ONBOARD_TEMP]);
 #endif
 	}
 
 	/* handle onboard humidity sensor */
 	if (buf[ON_BOARD_SENSOR_ERROR] != 0) {
 		syslog(LOG_ERR, "onboard humidity sensor out-of-date error");
+		eprintf("onboard humidity sensor out-of-date error");
 		values[HUMINITY] = - 0xFF;
 		sensor_state |= STATE_HUMINITY;
 	} else {
@@ -201,16 +218,22 @@ static int get_values(void)
 			buf[ON_BOARD_HUMIDITY_REG]);
 		syslog(LOG_INFO, "current onboard sensor humidity: %d %%",
 			values[HUMINITY]);
+		printf("current onboard sensor humidity: %d %%",
+			buf[ON_BOARD_HUMIDITY_REG]);
+		printf("current onboard sensor humidity: %d %%",
+			values[HUMINITY]);
 #endif
 	}
 
         /* handle brighness sensor */
 	if (buf[STATUS_REG] & 0x04) {
 		syslog(LOG_ERR, "onboard brightness sensor overrange");
+		eprintf("onboard brightness sensor overrange");
 		values[BRIGHTNESS] = - 0xFF;
 		sensor_state |= STATE_BRIGHTNESS;
 	} else if (buf[STATUS_REG] & 0x08) {
 		syslog(LOG_ERR, "onboard brightness sensor failure");
+		eprintf("onboard brightness sensor failure");
 		values[BRIGHTNESS] = - 0xFF;
 		sensor_state |= STATE_BRIGHTNESS;
 	} else {
@@ -221,6 +244,10 @@ static int get_values(void)
 			((buf[LIGHT_REG_H] << 8) | buf[LIGHT_REG_L]));
 		syslog(LOG_INFO, "current onboard sensor brightness: %d lux",
 			values[BRIGHTNESS]);
+		printf("current onboard sensor brightness: %d lux",
+			((buf[LIGHT_REG_H] << 8) | buf[LIGHT_REG_L]));
+		printf("current onboard sensor brightness: %d lux",
+			values[BRIGHTNESS]);
 #endif
 
 	}
@@ -228,6 +255,7 @@ static int get_values(void)
 	/* handle barometer temp */
 	if (buf[BMP280_STATUS] != 0) {
 		syslog(LOG_ERR, "onboard barometer sensor error");
+		eprintf("onboard barometer sensor error");
 		values[BARO_TEMP] = - 0xFF;
 		sensor_state |= STATE_BARO_TEMP;
 	} else {
@@ -238,12 +266,17 @@ static int get_values(void)
 			buf[BMP280_TEMP_REG]);
 		syslog(LOG_INFO, "current barometer sensor temperature: %d °C",
 			values[BARO_TEMP]);
+		printf("current barometer sensor temperature: %d °C",
+			buf[BMP280_TEMP_REG]);
+		printf("current barometer sensor temperature: %d °C",
+			values[BARO_TEMP]);
 #endif
 	}
 
 	/* handle barometer pressure */
 	if (buf[BMP280_STATUS] != 0) {
 		syslog(LOG_ERR, "onboard barometer sensor error");
+		eprintf("onboard barometer sensor error");
 		values[PRESSURE] = - 0xFF;
 		sensor_state |= STATE_PRESSURE;
 	} else {
@@ -258,6 +291,12 @@ static int get_values(void)
 				| buf[BMP280_PRESSURE_REG_H] << 16 ));
 		syslog(LOG_INFO, "current barometer sensor pressure: %d pascal",
 			values[PRESSURE]);
+		printf("current barometer sensor pressure: %d pascal",
+			(buf[BMP280_PRESSURE_REG_L]
+				| buf[BMP280_PRESSURE_REG_M] << 8
+				| buf[BMP280_PRESSURE_REG_H] << 16 ));
+		printf("current barometer sensor pressure: %d pascal",
+			values[PRESSURE]);
 #endif
 	}
 
@@ -266,16 +305,19 @@ static int get_values(void)
 		values[BODY_DETECT] = 1;
 #ifdef __DEBUG__
 		syslog(LOG_INFO, "body detected within 5 seconds");
+		puts("body detected within 5 seconds");
 #endif
 	} else {
 		values[BODY_DETECT] = 0;
 #ifdef __DEBUG__
 		syslog(LOG_INFO, "no body detected");
+		puts("no body detected");
 #endif
 	}
 
 #ifdef __DEBUG__
 	syslog(LOG_INFO, "the actual sensor state: 0x%x ", sensor_state);
+	printf("the actual sensor state: 0x%x ", sensor_state);
 #endif
 
 	return 0;
@@ -299,13 +341,16 @@ void * read_sensor(void *arg)
 	int err = get_values();
 	if (err < 0) {
 		syslog(LOG_ERR, "can't read from sensor hub");
+		eprintf("can't read from sensor hub");
 		exit(EXIT_FAILURE);
 	}
 
 	for (;;) {
 		err = get_values();
-		if (err < 0)
+		if (err < 0) {
 			syslog(LOG_ERR, "can't read from sensor hub");
+			eprintf("can't read from sensor hub");
+		}
 
 		sleep(60);
 	}
@@ -327,11 +372,13 @@ void * server_handling(void *arg)
 	snprintf(name_fifo, MAX_LEN_FIFO_NAME, SENSOR_CLIENT_FIFO, pid);
 #ifdef __DEBUG__
 	syslog(LOG_INFO, "client fifo name %s", name_fifo);
+	printf("client fifo name %s", name_fifo);
 #endif
 
 	int fd = create_write_fifo(name_fifo);
 	if (fd < 0) {
 		syslog(LOG_ERR, "can't setup client fifo");
+		eprintf("can't setup client fifo");
 		exit(EXIT_FAILURE);
 	}
 
@@ -407,12 +454,14 @@ int main(int argc, char *argv[])
 	err = init_sensor_hub(adapter, addr);
 	if (err < 0) {
 		syslog(LOG_ERR, "can't init sensor hub");
+		eprintf("can't init sensor hub");
 		exit(EXIT_FAILURE);
 	}
 
 	err = init_server_fifo();
 	if (err < 0) {
 		syslog(LOG_ERR, "can't init server fifo");
+		eprintf("can't init server fifo");
 		exit(EXIT_FAILURE);
 	}
 
@@ -420,12 +469,14 @@ int main(int argc, char *argv[])
 	err = pthread_create(&tid, NULL, read_sensor, NULL);
 	if (err != 0) {
 		syslog(LOG_ERR, "can't create thread");
+		eprintf("can't create thread");
 		exit(EXIT_FAILURE);
 	}
 
 	err = pthread_detach(tid);
 	if (err != 0) {
 		syslog(LOG_ERR, "can't detach thread -> ignore it");
+		eprintf("can't detach thread -> ignore it");
 		exit(EXIT_FAILURE);
 	}
 
@@ -434,11 +485,13 @@ int main(int argc, char *argv[])
 	memset(&req, 0, len);
 
 	syslog(LOG_INFO, "daemon is up and running");
+	puts("daemon is up and running");
 
 	for (;;) {
 		if (read(read_fifo, &req, len) != (int) len) {
 			syslog(LOG_ERR,
 				"len of request not valid -> ignore it");
+			eprintf("len of request not valid -> ignore it");
 			continue;
  		}
 
@@ -446,24 +499,31 @@ int main(int argc, char *argv[])
 		syslog(LOG_INFO, "pid %d", req.pid);
 #endif
 		/* only for information -> could be okay */
-		if (actual_num_threads > MAX_NUM_THREADS)
+		if (actual_num_threads > MAX_NUM_THREADS) {
 			syslog(LOG_ERR, "num threads > %d -> pls check",
 				actual_num_threads);
+			fprintf(stderr, "num threads > %d -> pls check",
+				actual_num_threads);
+		}
 
 		err = pthread_create(&tid, NULL, server_handling, &req);
 		if (err != 0) {
 			syslog(LOG_ERR, "can't create thread");
+			eprintf("can't create thread");
 			continue;
 		}
 		actual_num_threads++;
 
 #ifdef __DEBUG__
 		syslog(LOG_INFO, "created client fifo thread");
+		puts("created client fifo thread");
 #endif
 
 		err = pthread_detach(tid);
-		if (err != 0)
+		if (err != 0) {
 			syslog(LOG_ERR, "can't detach thread -> ignore it");
+			eprintf("can't detach thread -> ignore it");
+		}
 
 		memset(&req, 0, len);
 	}
